python/testData/highlighting/assignmentTargetWith.py
with open("") as <error descr="Cannot assign to operator">my_<<var</error>:
    pass